Bug 479583 - in intel gpu system, default software cursor disappears on screen after kwin commit b214251f81cbacacf3ef483081a7cef15343fa7f
Summary: in intel gpu system, default software cursor disappears on screen after kwin ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: multi-screen (other bugs)
Version First Reported In: 5.92.0
Platform: Other Linux
: VHI major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
: 479605 479634 479670 479682 479687 479708 479857 479948 480053 480286 480420 480481 480610 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-01-09 20:07 UTC by fanzhuyifan
Modified: 2024-01-31 20:29 UTC (History)
17 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fanzhuyifan 2024-01-09 20:07:42 UTC
After https://invent.kde.org/plasma/kwin/-/merge_requests/4858, my cursor disappear on the laptop screen when an external display is connected. The cursor still shows up as usual when I disconnect the external display.

Using laptop with intel iGPU and Nvidia dGPU, with prime setup.

Operating System: Arch Linux 
KDE Plasma Version: 5.91.90
KDE Frameworks Version: 5.248.0
Qt Version: 6.7.0
Kernel Version: 6.6.10-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 20 × 13th Gen Intel® Core™ i9-13900H
Memory: 15.2 GiB of RAM
Graphics Processor: Mesa Intel® Graphics
Manufacturer: ASUSTeK COMPUTER INC.
Product Name: ROG Zephyrus G16 GU603VV_GU603VV
System Version: 1.0
Comment 1 Bug Janitor Service 2024-01-10 07:19:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4862
Comment 2 fanzhuyifan 2024-01-11 05:15:51 UTC
*** Bug 479605 has been marked as a duplicate of this bug. ***
Comment 3 Zamundaaa 2024-01-11 16:10:35 UTC
*** Bug 479634 has been marked as a duplicate of this bug. ***
Comment 4 Paul de Vrieze 2024-01-11 16:57:21 UTC
In my case the cursor is visible on the intel screen, but not on the nvidia (external) screens. FYI kwin is using mesa/intel as primary acceleration.
Comment 5 Sam James 2024-01-11 17:44:09 UTC
(In reply to Bug Janitor Service from comment #1)
> A possibly relevant merge request was started @
> https://invent.kde.org/plasma/kwin/-/merge_requests/4862

That MR helps for me too. Thanks!
Comment 6 Vlad Zahorodnii 2024-01-11 18:25:17 UTC
Git commit 36222adb259ecfe9dac205bc3a067fc7ba9b6053 by Vlad Zahorodnii.
Committed on 11/01/2024 at 19:10.
Pushed by vladz into branch 'master'.

scene: Fix software cursor clip region

The dirty region is in the output local coordinate space.

M  +2    -2    src/compositor_wayland.cpp
M  +1    -1    src/scene/cursordelegate_opengl.cpp

https://invent.kde.org/plasma/kwin/-/commit/36222adb259ecfe9dac205bc3a067fc7ba9b6053
Comment 7 Mykola Krachkovsky 2024-01-11 21:18:29 UTC
Thank you, works fine now.
Comment 8 Mykola Krachkovsky 2024-01-11 21:26:39 UTC
Small glitch — when cursor moved fast between screens it may be left on last position on other screen.
Comment 9 fanzhuyifan 2024-01-11 21:33:01 UTC
(In reply to Mykola Krachkovsky from comment #8)
> Small glitch — when cursor moved fast between screens it may be left on last
> position on other screen.

That sounds like a separate issue. Could you open a separate bug report for it? Thanks! 

I have had similar issues with the cursor being left on the external monitor on a dual-gpu system with intel iGPU and nvidia dGPU, but haven't been seeing that recently.
Comment 10 Mykola Krachkovsky 2024-01-11 21:51:12 UTC
(In reply to fanzhuyifan from comment #9)
> That sounds like a separate issue. Could you open a separate bug report for
> it? Thanks! 

Done. https://bugs.kde.org/show_bug.cgi?id=479668

> I have had similar issues with the cursor being left on the external monitor
> on a dual-gpu system with intel iGPU and nvidia dGPU, but haven't been
> seeing that recently.

I have NVidia GPU but it's powered off (hardware LED confirms that) and no nvidia modules loaded (`lsmod | grep nv` shows only nvme modules). So I don't think it affects this.
Comment 11 Zamundaaa 2024-01-12 01:10:53 UTC
*** Bug 479670 has been marked as a duplicate of this bug. ***
Comment 12 Vlad Zahorodnii 2024-01-12 10:33:26 UTC
Git commit 0da6354bcea9fb1ee4a5dfdf9727c34b30ac7c97 by Vlad Zahorodnii.
Committed on 12/01/2024 at 11:20.
Pushed by vladz into branch 'Plasma/6.0'.

scene: Fix software cursor clip region

The dirty region is in the output local coordinate space.
(cherry picked from commit 36222adb259ecfe9dac205bc3a067fc7ba9b6053)

M  +2    -2    src/compositor_wayland.cpp
M  +1    -1    src/scene/cursordelegate_opengl.cpp

https://invent.kde.org/plasma/kwin/-/commit/0da6354bcea9fb1ee4a5dfdf9727c34b30ac7c97
Comment 13 Zamundaaa 2024-01-12 12:36:40 UTC
*** Bug 479670 has been marked as a duplicate of this bug. ***
Comment 14 Zamundaaa 2024-01-12 12:37:22 UTC
*** Bug 479687 has been marked as a duplicate of this bug. ***
Comment 15 fanzhuyifan 2024-01-12 16:12:07 UTC
*** Bug 479682 has been marked as a duplicate of this bug. ***
Comment 16 Zamundaaa 2024-01-12 20:43:43 UTC
*** Bug 479708 has been marked as a duplicate of this bug. ***
Comment 17 Chris Sutcliff 2024-01-13 13:22:43 UTC
I'm using kde-unstable on Arch.

I was having completely invisible cursor on any monitor (triple monitor setup). I found this bug and the fix on the arch forums where someone has also prepared the following patch to apply this fix and it's dependencies to kwin: https://pastebin.com/ykhzZZdB

With that patch applied to kwin I now have a cursor on two of my monitors (both standard orientation, 4k) but still no cursor on my 3rd 1440p portrait rotated monitor. All 3 are connected via DisplayPort to an AMD 6900XT.

I'm posting this here as the fix for this bug report at least partially solved my problem and something about my setup may give a clue as to why it doesn't work completely, or maybe this is a completely different bug. Happy to help debug it further if you can tell me what would help?
Comment 18 Chris Sutcliff 2024-01-13 14:04:19 UTC
It seems the portrait rotation is the key, cursor is fine on landscape and inverted landscape but either portrait orientation makes it invisible.
Comment 19 fanzhuyifan 2024-01-13 17:30:37 UTC
(In reply to Chris Sutcliff from comment #17)
> I'm using kde-unstable on Arch.
> 
> I was having completely invisible cursor on any monitor (triple monitor
> setup). I found this bug and the fix on the arch forums where someone has
> also prepared the following patch to apply this fix and it's dependencies to
> kwin: https://pastebin.com/ykhzZZdB
> 
> With that patch applied to kwin I now have a cursor on two of my monitors
> (both standard orientation, 4k) but still no cursor on my 3rd 1440p portrait
> rotated monitor. All 3 are connected via DisplayPort to an AMD 6900XT.
> 
> I'm posting this here as the fix for this bug report at least partially
> solved my problem and something about my setup may give a clue as to why it
> doesn't work completely, or maybe this is a completely different bug. Happy
> to help debug it further if you can tell me what would help?

You can find the commit fixing this bug in the "latest commit" field at the top.
If you click on it you will be led to gitlab and see the commit, which also contains a link to the corresponding MR and the related discussions.

Alternately, on this page, if you look at the previous messages, you can also find the MRs and commits fixing this.

Cheers
Comment 20 Chris Sutcliff 2024-01-13 19:32:13 UTC
(In reply to fanzhuyifan from comment #19)
> (In reply to Chris Sutcliff from comment #17)
> > I'm using kde-unstable on Arch.
> > 
> > I was having completely invisible cursor on any monitor (triple monitor
> > setup). I found this bug and the fix on the arch forums where someone has
> > also prepared the following patch to apply this fix and it's dependencies to
> > kwin: https://pastebin.com/ykhzZZdB
> > 
> > With that patch applied to kwin I now have a cursor on two of my monitors
> > (both standard orientation, 4k) but still no cursor on my 3rd 1440p portrait
> > rotated monitor. All 3 are connected via DisplayPort to an AMD 6900XT.
> > 
> > I'm posting this here as the fix for this bug report at least partially
> > solved my problem and something about my setup may give a clue as to why it
> > doesn't work completely, or maybe this is a completely different bug. Happy
> > to help debug it further if you can tell me what would help?
> 
> You can find the commit fixing this bug in the "latest commit" field at the
> top.
> If you click on it you will be led to gitlab and see the commit, which also
> contains a link to the corresponding MR and the related discussions.
> 
> Alternately, on this page, if you look at the previous messages, you can
> also find the MRs and commits fixing this.
> 
> Cheers

I'm already using the fix from this bug, it still doesn't work for portrait rotation. I'll open another for that.
Comment 21 Zamundaaa 2024-01-15 16:48:52 UTC
*** Bug 479857 has been marked as a duplicate of this bug. ***
Comment 22 fanzhuyifan 2024-01-17 16:11:30 UTC
*** Bug 479948 has been marked as a duplicate of this bug. ***
Comment 23 fanzhuyifan 2024-01-19 22:56:31 UTC
*** Bug 480053 has been marked as a duplicate of this bug. ***
Comment 24 Zamundaaa 2024-01-24 23:26:07 UTC
*** Bug 480286 has been marked as a duplicate of this bug. ***
Comment 25 Zamundaaa 2024-01-28 14:01:15 UTC
*** Bug 480420 has been marked as a duplicate of this bug. ***
Comment 26 fanzhuyifan 2024-01-29 17:46:14 UTC
*** Bug 480481 has been marked as a duplicate of this bug. ***
Comment 27 Vlad Zahorodnii 2024-01-31 20:29:44 UTC
*** Bug 480610 has been marked as a duplicate of this bug. ***