scene: Fix software cursor clip region

The dirty region is in the output local coordinate space.

BUG: 479583